guestpage new design implemented Registration overworked Old cyphers Removed from guest.js Unused files deleted or renamed for removal

--- a/docu/universe.reload.html
+++ b/docu/universe.reload.html
@@ -46,5 +46,17 @@
                     <td>file_id<br>content</td>
                     <td>Will be added to request if UFF file is open<br>Will be added to response if response.checksum != file checksum</td>
                 </tr>
+                <tr>
+                    <td>Feed</td>
+                    <td>sync</td>
+                    <td>type, (,type_id), last_id</td>
+                    <td>type, (,type_id)</td>
+                </tr>
+                <tr>
+                    <td>Notification</td>
+                    <td>push</td>
+                    <td>no request needed</td>
+                    <td></td>
+                </tr>
             </table>
         </div>
