--- a/teaser.html
+++ b/teaser.html
@@ -84,9 +84,9 @@
                         }
                 </style>
                 <div id="teaserCircle">
-                        join us on august 8th
+                    join us on august 8<sup>th</sup>
                 </div>
-
+                <a href="//twitter.com/universeos" target="_blank" style="position: absolute;bottom:15px;right:15px;cursor:pointer;color:#FFF;"><span class="icon blue-sc-twitter" style="width: 50px;height: 50px;margin-bottom: -15px;margin-right: -11px;"></span>#universeOS</a>
 
 
 
